--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -19,4 +19,4 @@
  $secondary-color: color("yellow", "base") !default;
  @import 'materialize';
  @import "materialize/extras/nouislider";
- @import "https://fonts.googleapis.com/icon?family=Material+Icons";
+ @import url("https://fonts.googleapis.com/icon?family=Material+Icons");
